syntax = "proto3";

package bigstar.customer;

option go_package = "github.com/LinkedInLearning/beginner-s-guide-to-go-Proto-protocol-buffer-go-4378006/go/customer";

option java_package = "com.example.bigstar.customer.message";
option java_outer_classname = "CustomerProto";
option java_multiple_files = true;

import "header/header.proto";

message Customer {
  int32 id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
}

message SigninRequest {
  Header header = 1;
  Customer customer = 2;
}

message SigninResponse {
  Header header = 1;
  Customer customer = 2;
}

message LoginRequest {
  Header header = 1;
  Customer customer = 2;
}

message LoginResponse {
  Header header = 1;
  Customer customer = 2;
}